<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="inCallLabel" translate="false">InCallUI</string>
    <string name="onHold">On hold</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network failure</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You can\'t make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="caller_manage_header">Conference call <xliff:g id="conf_call_time">%s</xliff:g></string>
    <string name="fake_phone_activity_phoneNumber_text" translatable="false">(650) 555-1234</string>
    <string name="fake_phone_activity_infoText_text" translatable="false">Incoming phone number</string>
    <string name="fake_phone_activity_placeCall_text" translatable="false">Fake Incoming Call</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_redialing">Retrying</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_hanging_up">Hanging up</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_my_phone_number">My number is <xliff:g id="my_phone_number">%s</xliff:g></string>
    <string name="notification_dialing">Dialing</string>
    <string name="notification_missedCallTitle">Missed call</string>
    <string name="notification_missedCallsTitle">Missed calls</string>
    <string name="notification_missedCallsMsg"><xliff:g id="num_missed_calls">%s</xliff:g> missed calls</string>
    <string name="notification_missedCallTicker">Missed call from <xliff:g id="missed_call_from">%s</xliff:g></string>
    <string name="notification_ongoing_call">Ongoing call</string>
    <string name="notification_on_hold">On hold</string>
    <string name="notification_incoming_call">Incoming call</string>
    <string name="notification_voicemail_title">New voicemail</string>
    <string name="notification_voicemail_title_count">New voicemail (<xliff:g id="count">%d</xliff:g>)</string>
    <string name="notification_voicemail_text_format">Dial <xliff:g id="voicemail_number">%s</xliff:g></string>
    <string name="notification_voicemail_no_vm_number">Voicemail number unknown</string>
    <string name="notification_network_selection_title">No service</string>
    <string name="notification_network_selection_text">Selected network (<xliff:g id="operator_name">%s</xliff:g>) unavailable</string>
    <string name="notification_action_end_call">Hang up</string>
    <string name="notification_missedCall_call_back">Call back</string>
    <string name="notification_missedCall_message">Message</string>
    <string name="incall_error_power_off">To place a call, first turn off Airplane mode.</string>
    <string name="incall_error_emergency_only">Not registered on network.</string>
    <string name="incall_error_out_of_service">Mobile network not available.</string>
    <string name="incall_error_no_phone_number_supplied">Call not sent, no valid number entered.</string>
    <string name="incall_error_call_failed">Call not sent.</string>
    <string name="incall_status_dialed_mmi">Starting MMI sequence\u2026</string>
    <string name="incall_error_supp_service_unknown">Unsupported service.</string>
    <string name="incall_error_supp_service_switch">Unable to switch calls.</string>
    <string name="incall_error_supp_service_separate">Unable to separate call.</string>
    <string name="incall_error_supp_service_transfer">Unable to transfer call.</string>
    <string name="incall_error_supp_service_conference">Unable to conference calls.</string>
    <string name="incall_error_supp_service_reject">Unable to reject call.</string>
    <string name="incall_error_supp_service_hangup">Unable to release call(s).</string>
    <string name="incall_call_type_label_sip">Internet call</string>
    <string name="emergency_enable_radio_dialog_title">Emergency call</string>
    <string name="emergency_enable_radio_dialog_message">Turning on radio\u2026</string>
    <string name="emergency_enable_radio_dialog_retry">Out of service area, retrying\u2026</string>
    <string name="dial_emergency_error">Call not sent. <xliff:g id="non_emergency_number">%s</xliff:g> is not an emergency number!</string>
    <string name="dial_emergency_empty_error">Call not sent. Dial an emergency number!</string>
    <string name="dialerKeyboardHintText">Use keyboard to dial</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenManageCallsText">Manage calls</string>
    <string name="onscreenManageConferenceText">Manage conference</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string-array name="absent_num" translatable="false">
        <item>ABSENT NUMBER</item>
        <item>ABSENTNUMBER</item>
    </string-array>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="voicemail_number_not_set">&lt;Not set&gt;</string>
    <string name="other_settings">Other call settings</string>
    <string name="calling_via_template">Calling via <xliff:g id="provider_name">%s</xliff:g></string>
    <string name="contactPhoto">contact photo</string>
    <string name="goPrivate">go private</string>
    <string name="selectContact">select contact</string>
    <string name="respond_via_sms_canned_response_1">Can\'t talk now. What\'s up?</string>
    <string name="respond_via_sms_canned_response_2">I\'ll call you right back.</string>
    <string name="respond_via_sms_canned_response_3">I\'ll call you later.</string>
    <string name="respond_via_sms_canned_response_4">Can\'t talk now. Call me later?</string>
    <string name="respond_via_sms_custom_message">Write your own...</string>
    <string name="custom_message_cancel">Cancel</string>
    <string name="custom_message_send">Send</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_title_2">Edit quick responses</string>
    <string name="respond_via_sms_setting_summary"></string>
    <string name="respond_via_sms_edittext_dialog_title">Quick response</string>
    <string name="respond_via_sms_menu_reset_default_activity">Reset default app</string>
    <string name="respond_via_sms_confirmation_format">Message sent to <xliff:g id="phone_number">%s</xliff:g>.</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="accessibility_speakerphone_enabled">Speakerphone enabled.</string>
    <string name="accessibility_call_muted">Call muted.</string>
    <string name="description_target_answer">Answer</string>
    <string name="description_target_send_sms">Send SMS</string>
    <string name="description_target_decline">Decline</string>
    <string name="description_direction_up">Slide up for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="description_direction_left">"Slide left for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="description_direction_right">Slide right for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="voicemail_notification_vibrate_when_title" msgid="8731372580674292759">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title" msgid="8995274609647451109">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Sound</string>
    <string name="default_notification_description">Default sound (<xliff:g id="default_sound_title">%1$s</xliff:g>)</string>
    <string name="voicemail_notification_vibrate_when_default" translatable="false">never</string>
    <string-array name="voicemail_notification_vibrate_when_values" translatable="false">
        <item>always</item>
        <item>silent</item>
        <item>never</item>
    </string-array>
    <string name="ringtone_title" msgid="5379026328015343686">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="dial_pad_autocomplete">Dial pad auto complete</string>
    <string name="preference_category_ringtone">Ringtone Vibrate</string>
</resources>