<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
-->


<!--
     In-call onscreen touch UI elements, used on some platforms.

     This layout is a fullscreen overlay, drawn on top of the
     non-touch-sensitive parts of the in-call UI (i.e. the call card).

     The top-level View here is a InCallTouchUi (FrameLayout) with 2 children:
       (1) inCallControls: the widgets visible while a regular call (or calls) is in progress
       (2) incomingCallWidget: the UI displayed while an incoming call is ringing
     In usual cases, one of these is visible at any given moment.
     One exception is when incomingCallWidget is fading-out. At that moment, we show
     inCallControls beneath incomingCallWidget for smoother transition.
-->


<!-- Main cluster of onscreen buttons on the lower part of the screen. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inCallControls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/in_call_button_bottom_padding" >

    <!-- Main cluster of onscreen buttons on the lower part of the screen. -->

    <FrameLayout
        android:id="@+id/extraButtonRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/manageConferenceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="top|center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/onscreenManageConferenceText"
            android:src="@drawable/btn_compound_conference_sprd"
            android:visibility="gone" />

        <!-- android:background="?android:attr/selectableItemBackground" -->

        <LinearLayout
            android:id="@+id/cdmaMergeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/cdmaMergeButtonImage"
                style="@style/InCallButton"
                android:clickable="false"
                android:contentDescription="@string/onscreenMergeCallsText"
                android:src="@drawable/ic_merge_holo_dark" />

            <TextView
                android:id="@+id/cdmaMergeButtonLabel"
                style="@style/InCallButtonLabelSprd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onscreenMergeCallsText" />
        </LinearLayout>
    </FrameLayout>

    <!-- Row2 Begin -->


    <!-- Record Begin -->

    <ToggleButton
        android:id="@+id/recordButton"
        style="@style/IncallImageSprd"
        android:layout_above="@+id/dialpadButton"
        android:layout_alignLeft="@+id/audioButton"
        android:layout_toLeftOf="@+id/holdButton"
        android:background="@drawable/btn_compound_record_background_sprd"
        android:textOff="@null"
        android:textOn="@null" />

    <TextView
        android:id="@+id/recordButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_alignBottom="@id/recordButton"
        android:layout_alignRight="@id/recordButton"
        android:layout_alignLeft="@id/recordButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/recording"
        android:singleLine="true"
        android:ellipsize="end"/>

    <!-- Record End -->


    <!-- HOLD/SWAP Begin -->

    <ToggleButton
        android:id="@id/holdButton"
        style="@style/IncallImageSprd"
        android:layout_above="@id/dialpadButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_compound_hold_background_sprd"
        android:contentDescription="@string/onscreenHoldText"
        android:textOff="@null"
        android:textOn="@null" />
    <TextView
        android:id="@+id/holdButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_alignBottom="@id/holdButton"
        android:layout_alignRight="@id/holdButton"
        android:layout_alignLeft="@id/holdButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/card_title_on_hold"
        android:singleLine="true"
        android:ellipsize="end" />

    <ToggleButton
        android:id="@+id/swapButton"
        style="@style/IncallImageSprd"
        android:layout_above="@id/dialpadButton"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:background="@drawable/btn_compound_switch_sprd"
        android:contentDescription="@string/onscreenSwapCallsText"
        android:text="@string/onscreenSwapCallsText"
        android:textOff="@null"
        android:textOn="@null" />
    <!-- HOLD/SWAP End -->


    <!-- Add/Merge Begin -->

    <ToggleButton
        android:id="@+id/addButton"
        style="@style/IncallImageSprd"
        android:layout_above="@id/dialpadButton"
        android:layout_toRightOf="@id/holdButton"
        android:background="@drawable/btn_compound_add_backgroud_sprd"
        android:contentDescription="@string/onscreenAddCallText"
        android:textOff="@null"
        android:textOn="@null" />
    <TextView
        android:id="@+id/addButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_alignBottom="@id/addButton"
        android:layout_alignRight="@id/addButton"
        android:layout_alignLeft="@id/addButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/onscreenAddCallText"
        android:singleLine="true"
        android:ellipsize="end" />

    <ToggleButton
        android:id="@+id/mergeButton"
        style="@style/IncallImageSprd"
        android:layout_above="@id/dialpadButton"
        android:layout_toRightOf="@id/swapButton"
        android:visibility="gone"
        android:background="@drawable/btn_compound_merge_backgroud_sprd"
        android:contentDescription="@string/onscreenMergeCallsText"
        android:textOff="@null"
        android:textOn="@null" />
    <TextView
        android:id="@+id/mergeButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_alignBottom="@id/mergeButton"
        android:layout_alignRight="@id/mergeButton"
        android:layout_alignLeft="@id/mergeButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/onscreenMergeCallsText"
        android:singleLine="true"
        android:ellipsize="end"
        android:visibility="gone" />
    <!-- Add/Merge End -->
    <!-- Row2 End -->


    <!-- Row3 Begin -->
    <!-- Audio Begin -->

    <ToggleButton
        android:id="@id/audioButton"
        style="@style/IncallImageSprd"
        android:layout_above="@+id/endButton"
        android:layout_toLeftOf="@id/dialpadButton"
        android:background="@drawable/btn_compound_audio_sprd"
        android:contentDescription="@string/onscreenAudioText"
        android:textOff="@null"
        android:textOn="@null" />

    <TextView
        android:id="@+id/audioButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_alignBottom="@id/audioButton"
        android:layout_alignRight="@id/audioButton"
        android:layout_alignLeft="@id/audioButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/onscreenAudioText"
        android:singleLine="true"
        android:ellipsize="end" />

    <!-- Audio End -->


    <!-- Key Board Begin -->

    <ToggleButton
        android:id="@id/dialpadButton"
        style="@style/IncallImageSprd"
        android:layout_above="@id/endButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_compound_keyboard_background_sprd"
        android:textOff="@null"
        android:textOn="@null" />
    <TextView
        android:id="@+id/dialpadButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_alignBottom="@id/dialpadButton"
        android:layout_alignRight="@id/dialpadButton"
        android:layout_alignLeft="@id/dialpadButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/onscreenShowDialpadText"
        android:singleLine="true"
        android:ellipsize="end" />
    <!-- Key Board End -->


    <!-- Mute Begin -->

    <ToggleButton
        android:id="@+id/muteButton"
        style="@style/IncallImageSprd"
        android:layout_above="@id/endButton"
        android:layout_toRightOf="@id/dialpadButton"
        android:background="@drawable/btn_compound_mute_background_sprd"
        android:contentDescription="@string/onscreenMuteText"
        android:textOff="@null"
        android:textOn="@null"/>

    <TextView
        android:id="@+id/muteButtonLabel"
        style="@style/IncallImageSprd"
        android:layout_width="match_parent"
        android:layout_alignBottom="@id/muteButton"
        android:layout_alignLeft="@id/muteButton"
        android:layout_alignRight="@id/muteButton"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/onscreenMuteText" />

    <!-- Mute End -->
    <!-- Row3 End -->


    <!-- End Call Begin -->

    <Button
        android:id="@id/endButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/in_call_bottom_button_height"
        android:layout_alignLeft="@id/audioButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/muteButton"
        android:layout_marginTop="@dimen/in_call_button_top_padding"
        android:background="@drawable/call_button_reject_incall_sprd"
        android:contentDescription="@string/onscreenEndCallText"
        android:text="@string/onscreenEndCallText"
        android:textColor="@color/incall_call_banner_text_color" />

</RelativeLayout>